<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/AnonBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/anonymous_inner_class_button" />

        <Button
            android:id="@+id/NamedBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/named_class_button" />

        <Button
            android:id="@+id/XMLBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="myCustomMethod"
            android:text="@string/xml_listener_example" />

        <Button
            android:id="@+id/GoToClassExample"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="goToSwitchActivity"
            android:text="@string/go_to_class_example" />

        <Button
            android:id="@+id/longClickBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/long_click_example" />

        <Button
            android:id="@+id/impBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/implicit_intent_open_webpage" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>